[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Rooms/Fighting/fight_manager/fight_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/Rooms/Fighting/FightScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Rooms/Fighting/FightEnd.tscn" type="PackedScene" id=3]

[node name="fight_manager" type="Node2D"]
script = ExtResource( 1 )

[node name="FightScene" parent="." instance=ExtResource( 2 )]

[node name="FightEnd" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="exit" from="FightScene" to="." method="_on_FightScene_exit"]
[connection signal="exit" from="FightEnd" to="." method="_on_FightEnd_exit"]
